--- a/ip.html
+++ b/ip.html
@@ -8,6 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
+      color: white; /* Set text color to white */
     }
     input {
       margin-right: 10px;
@@ -25,7 +26,7 @@
 <body>
 
   <label for="ipInput">Enter IP Address:</label>
-  <input type="text" id="ipInput" placeholder="e.g., 31.198.197.5">
+  <input type="text" id="ipInput" placeholder="e.g., 45.198.247.51">
   <button onclick="searchIp()">Search</button>
 
   <output id="resultOutput"></output>
